[ALPS07769703] SCP: scp dvfs disable
disable scp dvfs for 6765

MTK-Commit-Id: d45b7f75e12f568bc18d303b606c649630429ee2

Change-Id: I04743106c6f6cccee0f8f5aeb6be3fbec6c9d3b1
CR-Id: ALPS07769703
Feature: SCP DVFS Kernel
Signed-off-by: ot_sumitra.dwivedi <ot_sumitra.dwivedi@mediatek.com>
(cherry picked from commit 08b0b2e680987d59f9316fd6105d1d23543b594a)

--- a/drivers/misc/mediatek/Kconfig
+++ b/drivers/misc/mediatek/Kconfig
@@ -50,6 +50,7 @@ config MTK_PLAT_POWER_MT6768
 
 config MTK_PLAT_POWER_MT6765
 	tristate "Platform power specified macro"
+	select SCP_DVFS_NOT_READY
 	help
 	  This macro is used to distinguish the platform dependent parts
 	  from those power related features.
