[ALPS07699498] arm64: dts: mt6765: iommus entry
iommus entry

MTK-Commit-Id: c9a38d335744a1f4a5a00813c0e9866c369fc900

Change-Id: Ida394bb1042dbbaafc50ac9c002d424bfa6b2fea
Signed-off-by: pankaj.jangir <pankaj.jangir@mediatek.com>
CR-Id: ALPS07699498
Feature: Video Driver

--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -4322,6 +4322,16 @@ initcall_debug=1 pelt=8";
 			"MT_CG_VDEC",
 			"MT_CG_VENC";
 		mediatek,larbs = <&smi_larb1>;
+		iommus = <&iommu M4U_PORT_VENC_RCPU>,
+			<&iommu M4U_PORT_VENC_REC>,
+			<&iommu M4U_PORT_VENC_BSDMA>,
+			<&iommu M4U_PORT_VENC_SV_COMV>,
+			<&iommu M4U_PORT_VENC_RD_COMV>,
+			<&iommu M4U_PORT_JPGENC_RDMA>,
+			<&iommu M4U_PORT_JPGENC_BSDMA>,
+			<&iommu M4U_PORT_VENC_CUR_CHROMA>,
+			<&iommu M4U_PORT_VENC_REF_LUMA>,
+			<&iommu M4U_PORT_VENC_REF_CHROMA>;
 		power-domains = <&scpsys MT6765_POWER_DOMAIN_DIS>,
 				<&scpsys MT6765_POWER_DOMAIN_VCODEC>;
 		operating-points-v2 = <&opp_table_mm>;
