[ALPS07699498] Video Iova Porting
Video Iova Porting

MTK-Commit-Id: f29650aed89c87b24f6f7bacb901bc430e773721

Change-Id: I2798eeeb62eaddea89f4f104e2bc19511433ef54
Signed-off-by: pankaj.jangir <pankaj.jangir@mediatek.com>
CR-Id: ALPS07699498
Feature: Video Driver

--- a/drivers/misc/mediatek/videocodec/Makefile
+++ b/drivers/misc/mediatek/videocodec/Makefile
@@ -32,4 +32,7 @@ ccflags-y += \
     -I$(srctree)/drivers/misc/mediatek/videocodec/include   \
     -I$(srctree)/drivers/misc/mediatek/videocodec   \
     -I$(srctree)/drivers/misc/mediatek/videocodec/include/kernel   \
-    -I$(srctree)/drivers/misc/mediatek/mtk-interconnect
+    -I$(srctree)/drivers/misc/mediatek/mtk-interconnect   \
+    -I$(srctree)/drivers/iommu \
+    -I$(srctree)/drivers/misc/mediatek/iommu/ \
+    -I$(srctree)/drivers/dma-buf/heaps
