[ALPS07790316] arm64: dts: mt6768: fix scp error
Fix scp vcore/vsram config error

MTK-Commit-Id: a8a6c0b00cec89fc55ea3d2fa438dbddecc1c325

Signed-off-by: jc.chen <jc.chen@mediatek.com>
CR-Id: ALPS07790316
Feature: Suspend
Change-Id: Ia3f17bc90a053f488339e31837feea2213a2c286

--- a/arch/arm64/boot/dts/mediatek/mt6768.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6768.dts
@@ -1211,6 +1211,8 @@ cma=64M transparent_hugepage=never";
 		gpio-mode-reg = <0x430 0x7 8 1>;
 
 		dvfsrc-vscp-supply = <&dvfsrc_vscp>;
+		sshub-vcore-supply = <&mt_pmic_vcore_buck_reg>;
+		sshub-vsram-supply = <&mt_pmic_vsram_others_ldo_reg>;
 		legacy_support_v1;
 
 	};
