[ALPS07316658]  arm64: dts: mt6833: UART
Disable UART kernel logs in User mode

MTK-Commit-Id: 31a25dc10a5a6dd9c5115631dc4eedafd3d409fd

Change-Id: Ia169577bc06a164e701032b305f5763ca2783517
Signed-off-by: ot_shiv.prakash <ot_shiv.prakash@mediatek.com>
CR-Id: ALPS07316658
Feature: uart_driver

--- a/arch/arm64/boot/dts/mediatek/mt6833.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6833.dts
@@ -55,7 +55,7 @@
 
 	/* chosen */
 	chosen: chosen {
-		bootargs = "console=tty0 console=ttyS0,921600n1 root=/dev/ram \
+		bootargs = "console=tty0 root=/dev/ram \
 			8250.nr_uarts=4 \
 			vmalloc=400M swiotlb=noforce \
 			firmware_class.path=/vendor/firmware \
