[ALPS07165440] clk: md mtcmos for legacy
md mtcmos for legacy structure

MTK-Commit-Id: 714ebd0c33c70d4c73463b9ad42c6679fa11846e

CR-Id: ALPS07165440
Feature: CLKMGR_Kernel
Change-Id: Ibb7e637538e392bb597e6b819c2478adf28927ec
Signed-off-by: lokesh <lokesh.tripathi@mediatek.com>
(cherry picked from commit a5ee7bd1a03c001bd46955383d0bca5bdcc2734f)

--- a/drivers/clk/mediatek/Kconfig
+++ b/drivers/clk/mediatek/Kconfig
@@ -126,6 +126,16 @@ config COMMON_CLK_MT6765
 	  If you wish to use clock resources from the MT6765 SOC,
 	  say Y. Otherwise, say N.
 
+config COMMON_CLK_PG_LEGACY_V1
+        tristate "Clock PG driver for legacy"
+        depends on ARM64 || ARM || COMPILE_TEST
+        select COMMON_CLK_MEDIATEK
+        help
+	  This driver supports MediaTek MT6765 legacy PG clocks,
+	  which is used to control basic clock output.
+	  If you wish to use clock resources from the MT6765 SOC,
+	  say Y. Otherwise, say N.
+
 config COMMON_CLK_MT6765_AUDIOSYS
        bool "Clock driver for MediaTek MT6765 audiosys"
        depends on COMMON_CLK_MT6765
