--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -1150,6 +1150,17 @@ initcall_debug=1 pelt=8";
 		smi_comm = <&smi_common>;
 	};
 
+	scpsys_clk: scpsys@10001000 {
+		compatible = "mediatek,scpsys-clk", "syscon";
+		reg =	<0 0x10001000 0 0x1000>, /* infra_ao */
+				<0 0x10006000 0 0x1000>, /* spm */
+				<0 0x14002000 0 0x1000>, /* spi_common */
+				<0 0x1020e000 0 0x1000>, /* infracfg */
+				<0 0x18004000 0 0x1000>, /* connsys */
+				<0 0x18002000 0 0x1000>; /* connsys mcu */
+		#clock-cells = <1>;
+	};
+
 	topckgen: topckgen@10000000 {
 		compatible = "mediatek,mt6765-topckgen", "syscon";
 		reg = <0 0x10000000 0 0x1000>;
@@ -2006,6 +2017,7 @@ initcall_debug=1 pelt=8";
 		mediatek,offset_apon_md1 = <0x1C24>;
 		mediatek,cldma_capability = <6>;
 		clocks =
+			<&scpsys_clk SCP_SYS_MD1>,
 			<&infracfg_ao CLK_IFR_CLDMA_BCLK>,
 			<&infracfg_ao CLK_IFR_CCIF_AP>,
 			<&infracfg_ao CLK_IFR_CCIF_MD>,
@@ -2014,6 +2026,7 @@ initcall_debug=1 pelt=8";
 			<&infracfg_ao CLK_IFR_CCIF2_AP>,
 			<&infracfg_ao CLK_IFR_CCIF2_MD>;
 		clock-names =
+			"scp-sys-md1-main",
 			"infra-cldma-bclk",
 			"infra-ccif-ap",
 			"infra-ccif-md",
@@ -2021,7 +2034,6 @@ initcall_debug=1 pelt=8";
 			"infra-ccif1-md",
 			"infra-ccif2-ap",
 			"infra-ccif2-md";
-		power-domains = <&scpsys MT6765_POWER_DOMAIN_MD1>;
 		_vmodem-supply = <&mt_pmic_vmodem_buck_reg>;
 		_vcore-supply = <&mt_pmic_vcore_buck_reg>;
 		ccci-infracfg = <&infracfg_ao>;
