--- a/drivers/misc/mediatek/cameraisp/dpe/Makefile
+++ b/drivers/misc/mediatek/cameraisp/dpe/Makefile
@@ -44,4 +44,8 @@ endif
 ifeq ($(CONFIG_MTK_CAMERA_DPE_ISP40),m)
 obj-$(CONFIG_MTK_CAMERA_DPE_ISP40) += camera_dpe_isp40.o
 camera_dpe_isp40-objs += isp_40/camera_dpe.o
+else ifeq ($(CONFIG_MTK_CAMERA_DPE_ISP40), y)
+obj-$(CONFIG_MTK_CAMERA_DPE_ISP40) += camera_dpe_isp40.o
+camera_dpe_isp40-objs += isp_40/camera_dpe.o
 endif
+
