[ALPS07799802] arm64: dts: mt6765: pm_qos porting
Pm_qos reg porting for mt6765.

MTK-Commit-Id: 9031e131ea429028da9a72e9057e4d3992bd3577

Change-Id: I0791b7860ab5649528ae93843cc8e123e83719bc
Signed-off-by: virendra.upadhyay <virendra.upadhyay@mediatek.com>
CR-Id: ALPS07799802
Feature: pmqos_kernel

--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -1617,7 +1617,7 @@ initcall_debug=1 pelt=8";
 
 	qos@00110b80 {
 		compatible = "mediatek,mt6765-qos";
-		reg = <0 0x10006000 0 0x1000>;
+		reg = <0 0x00110b80 0 0x80>;
 	};
 
 	mbist_ao@10013000 {
