[ALPS07670628] mdp: mt6765: add config MTK_MDP_MT6765 for 32 bit
[detail]
add config MTK_MDP_MT6765 for 32 bit

MTK-Commit-Id: 11bf6162fc432f9248b78bbd361c3e15f9b48733

Change-Id: I7346bdd252dd7c1f0b53eb9a8d17ebb8446e6b8f
Signed-off-by: ot_bp.gautam <ot_bp.gautam@mediatek.com>
CR-Id: ALPS07670628
Feature: mdp driver

--- a/drivers/misc/mediatek/mdp/Kconfig
+++ b/drivers/misc/mediatek/mdp/Kconfig
@@ -54,6 +54,14 @@ config MTK_MDP_MT6768
 	  and aee db. Enable performance tools which add instruction
 	  inside packet and profiling.
 
+config MTK_MDP_MT6765
+	tristate "enable MDP MT6765 driver extension"
+	help
+	  This extension enable debug feature, such as mdp-status,
+	  cmdq-record, pre-dump, timeout error dump, first error buffer
+	  and aee db. Enable performance tools which add instruction
+	  inside packet and profiling.
+
 config MTK_MDP_MTEE_SUPPORT
 	tristate "enable MDP secure path for MTEE"
 	help
