--- a/drivers/misc/mediatek/mdp/Makefile
+++ b/drivers/misc/mediatek/mdp/Makefile
@@ -67,6 +67,7 @@ obj-$(CONFIG_MTK_MDP_MT6873) += mdp_drv_mt6873.o
 obj-$(CONFIG_MTK_MDP_MT6853) += mdp_drv_mt6853.o
 ifeq ($(CONFIG_MTK_MDP), y)
 obj-$(CONFIG_MTK_MDP_MT6768) += mdp_drv_mt6768.o
+obj-$(CONFIG_MTK_MDP_MT6765) += mdp_drv_mt6765.o
 else
 ifneq ($(wildcard $(srctree)/$(src)/mdp_mt6893.c),)
 obj-$(CONFIG_MTK_MDP) += mdp_drv_mt6893.o
