[ALPS07713732] arm64: dts: mt6833: add rcupdate.rcu_expedited=1
add rcupdate.rcu_expedited=1 in bootargs in MT6833

MTK-Commit-Id: 8b71c237a96f76a112f809bb01625295237294f4

CR-Id: ALPS07713732
Feature: Boot Time Enhancement
Change-Id: I0aed8f57dc6f62f1dcbf7e89ff22881af132e21a
Signed-off-by: mtk14759 <zhijun.ding@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/mt6833.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6833.dts
@@ -57,6 +57,7 @@
 	chosen: chosen {
 		bootargs = "console=tty0 root=/dev/ram \
 			8250.nr_uarts=4 \
+			rcupdate.rcu_expedited=1 \
 			vmalloc=400M swiotlb=noforce \
 			firmware_class.path=/vendor/firmware \
 			androidboot.hardware=mt6833 \
