[ALPS07495029] arm32: mt6765: added cmdq_mbox_ext_mt6765
[Details]
added config MTK_CMDQ_MBOX_EXT_MT6765

MTK-Commit-Id: ee8b9d272af910b077dca072b158bd07124d051e

Change-Id: I3feb09a202bc7cef3f05662875d16b2cff690575
Signed-off-by: ot_devendra.balihar <ot_devendra.balihar@mediatek.com>
CR-Id: ALPS07495029
Feature: cmdq_gce

--- a/drivers/misc/mediatek/cmdq/mailbox/Makefile
+++ b/drivers/misc/mediatek/cmdq/mailbox/Makefile
@@ -67,6 +67,7 @@ obj-$(CONFIG_MTK_CMDQ_MBOX_EXT) += cmdq-test.o
 
 ifeq ($(CONFIG_MTK_CMDQ_MBOX_EXT), y)
 obj-$(CONFIG_MTK_CMDQ_MBOX_EXT_MT6768) += cmdq-platform-mt6768.o
+obj-$(CONFIG_MTK_CMDQ_MBOX_EXT_MT6765) += cmdq-platform-mt6765.o
 else
 ifneq ($(wildcard $(srctree)/$(src)/cmdq-platform-mt6833.c),)
 obj-$(CONFIG_MTK_CMDQ_MBOX_EXT) += cmdq-platform-mt6833.o
