--- a/drivers/misc/mediatek/cmdq/Kconfig
+++ b/drivers/misc/mediatek/cmdq/Kconfig
@@ -15,3 +15,12 @@ config MTK_CMDQ_MBOX_EXT_MT6768
 	  and aee db. Enable performance tools which add instruction
 	  inside packet and profiling. Also enable secure path with
 	  new sec controller which decuple with v3 driver.
+
+config MTK_CMDQ_MBOX_EXT_MT6765
+	tristate "enable CMDQ mailbox driver extension on mt6765"
+	help
+	  This extension enable debug feature, such as cmdq-status,
+	  cmdq-record, pre-dump, timeout error dump, first error buffer
+	  and aee db. Enable performance tools which add instruction
+	  inside packet and profiling. Also enable secure path with
+	  new sec controller which decuple with v3 driver.
