[ALPS07803358] arm64: dts: mt6768: add gauge refers to fast charging
add gauge node refers to fast charging node

MTK-Commit-Id: ca5606909c025b661b59f449dc683bde04d893af

Signed-off-by: mtk24224 <xueqing.wu@mediatek.com>
CR-Id: ALPS07803358
Feature: cmdq_gce
Change-Id: I57b73a59444eae67d25b3ba788e4b3fcf54e2260

--- a/arch/arm64/boot/dts/mediatek/mt6768.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6768.dts
@@ -4763,7 +4763,7 @@ cma=64M transparent_hugepage=never";
 
 	pe: pe {
 		compatible = "mediatek,charger,pe";
-
+		gauge = <&mtk_gauge>;
 		ta_12v_support;
 		ta_9v_support;
 
@@ -4780,7 +4780,7 @@ cma=64M transparent_hugepage=never";
 	};
 	pe2: pe2 {
 		compatible = "mediatek,charger,pe2";
-
+		gauge = <&mtk_gauge>;
 		/* PE 2.0 */
 		pe20_ichg_level_threshold = <1000000>; /* uA */
 		ta_start_battery_soc = <0>;
@@ -4807,7 +4807,7 @@ cma=64M transparent_hugepage=never";
 
 	pdc: pdc {
 		compatible = "mediatek,charger,pd";
-
+		gauge = <&mtk_gauge>;
 		min_charger_voltage = <4600000>;
 		pd_vbus_low_bound = <5000000>;
 		pd_vbus_upper_bound = <5000000>;
