[ALPS07171718] Adding compatibility for 32-bit Non-GKI
Adding compatibility for 32-bit Non-GKI

MTK-Commit-Id: 5d32ce23b31147de541c44e50b3d09a857359a6c

Change-Id: Iab4c5c484950f3ec2c91987417a0a19287e38bc4
Signed-off-by: maunu.singhal <maunu.singhal@mediatek.com>
CR-Id: ALPS07171718
Feature: alsa_sound_soc
(cherry picked from commit e1806b4516ce6c98789981803c13d00c70f5f06b)

--- a/sound/soc/mediatek/Kconfig
+++ b/sound/soc/mediatek/Kconfig
@@ -437,6 +437,14 @@ config MTK_SND_SOC_NEW_ARCH
 	  If new chip after mt6757, we will enable this config.
 	  Audio driver refactor to common folder and platform folder.
 
+config MTK_SND_SOC_NEW_ARCH_COMMON
+	tristate "ASoc support for common drivers"
+	help
+	  This adds support for common drivers
+	  that can be used if MTK_SND_SOC_NEW_ARCH is enabled.
+	  Select Y if you have such device.
+	  If unsure select "N".
+
 config SND_SOC_CODEC_MT6357
 	tristate "ASoc Audio driver for MT6357 codec"
 	help
