[ALPS07814729] arm64: dts: mt6768: add gauge refers to fast charging
add 32bit mt6768.dts gauge node refers to fast charging node

MTK-Commit-Id: 2f2d6cd2b3937fc187064b4a06e64dd6e377f053

Signed-off-by: mtk24224 <xueqing.wu@mediatek.com>
CR-Id: ALPS07814729
Feature: cmdq_gce
Change-Id: Ie678bdc09798e16584101666efbb802e46e2bf18

--- a/arch/arm/boot/dts/mt6768.dts
+++ b/arch/arm/boot/dts/mt6768.dts
@@ -4671,7 +4671,7 @@ cma=64M transparent_hugepage=never clk_ignore_unused=1";
 
 	pe: pe {
 		compatible = "mediatek,charger,pe";
-
+		gauge = <&mtk_gauge>;
 		ta_12v_support;
 		ta_9v_support;
 
@@ -4688,7 +4688,7 @@ cma=64M transparent_hugepage=never clk_ignore_unused=1";
 	};
 	pe2: pe2 {
 		compatible = "mediatek,charger,pe2";
-
+		gauge = <&mtk_gauge>;
 		/* PE 2.0 */
 		pe20_ichg_level_threshold = <1000000>; /* uA */
 		ta_start_battery_soc = <0>;
@@ -4715,7 +4715,7 @@ cma=64M transparent_hugepage=never clk_ignore_unused=1";
 
 	pdc: pdc {
 		compatible = "mediatek,charger,pd";
-
+		gauge = <&mtk_gauge>;
 		min_charger_voltage = <4600000>;
 		pd_vbus_low_bound = <5000000>;
 		pd_vbus_upper_bound = <5000000>;
