[ALPS07804444] arm64: dts: mt6768: fix eint node
Fixed eints name being capitalized.

MTK-Commit-Id: ef3482f244011e4c90f0cb8c4f47c5652f78fd5b

Signed-off-by: Rocco Yue <rocco.yue@mediatek.com>
CR-Id: ALPS07804444
Feature: Modem Interface Driver
Change-Id: Ia69e8d945f09a6584067be53b46d09089a4ce92c

--- a/arch/arm64/boot/dts/mediatek/mt6768.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6768.dts
@@ -2046,6 +2046,12 @@ cma=64M transparent_hugepage=never";
 			"infra-ccif2-md";
 	};
 
+	md1_sim1_hot_plug_eint:MD1_SIM1_HOT_PLUG_EINT {
+	};
+
+	md1_sim2_hot_plug_eint:MD1_SIM2_HOT_PLUG_EINT {
+	};
+
 	bpi_bsi_slv0@1021e000 {
 		compatible = "mediatek,bpi_bsi_slv0";
 		reg = <0 0x1021e000 0 0x1000>;
@@ -5002,12 +5008,6 @@ cma=64M transparent_hugepage=never";
 
 	gpio_usage_mapping:gpio {
 		compatible = "mediatek,gpio_usage_mapping";
-	};
-
-	md1_sim1_hot_plug_eint: md1_sim1_hot_plug_eint {
-	};
-
-	md1_sim2_hot_plug_eint: md1_sim2_hot_plug_eint {
 	};
 
 	drm_wv: drm_wv {
