[ALPS07805813] ppm: abjust display notifier API
abjust display notifier api

MTK-Commit-Id: 3c39e34d85acb22472eae8ff2700d4966cc68baf

Signed-off-by: mtk24676 <C.Cheng@mediatek.com>
CR-Id: ALPS07805813
Feature: PPM_CPU FreqQoS
Change-Id: Ib9c0f83809de556f00476122ab9af8e668d26228

--- a/drivers/misc/mediatek/ppm_v3/Makefile
+++ b/drivers/misc/mediatek/ppm_v3/Makefile
@@ -21,7 +21,8 @@ ccflags-y += \
 	-I$(srctree)/drivers/gpu/mediatek/gpufreq/			\
 	-I$(srctree)/drivers/misc/mediatek/thermal/inc/			\
 	-I$(srctree)/drivers/misc/mediatek/include/leakage_table_v2	\
-	-I$(srctree)/drivers/misc/mediatek/cpufreq_v2/inc
+	-I$(srctree)/drivers/misc/mediatek/cpufreq_v2/inc \
+	-I$(srctree)/drivers/gpu/drm/mediatek/mediatek_v2
 
 ifneq ($(CONFIG_FPGA_EARLY_PORTING),y)
 
