--- a/drivers/misc/mediatek/thermal/Makefile
+++ b/drivers/misc/mediatek/thermal/Makefile
@@ -22,6 +22,7 @@ ccflags-y  += -I$(srctree)/drivers/misc/mediatek/base/power/include/
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/base/power/include/gpufreq_v1/
 ccflags-y  += -I$(srctree)/drivers/gpu/mediatek/gpufreq/v2/include/
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/thermal/common/inc/
+ccflags-y  += -I$(srctree)/drivers/gpu/drm/mediatek/mediatek_v2
 
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/vpu/
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/mdla/1.0
