[ALPS07817832] arm64: dts: mt6768: fix nvmem
fix nvmem

MTK-Commit-Id: b4575de4ed92d04b17e52dc68d55c87472d9b735

Signed-off-by: ot_zongxing.li <ot_zongxing.li@mediatek.com>
CR-Id: ALPS07817832
Feature: pw_gauge_driver
Change-Id: I96eb5dba1a50261851f4700adbd51aff8adc47a1

--- a/arch/arm64/boot/dts/mediatek/mt6768.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6768.dts
@@ -1463,7 +1463,7 @@ cma=64M transparent_hugepage=never";
 						"pmic_bif_voltage",
 						"pmic_ptim_voltage",
 						"pmic_ptim_r";
-				/*nvmem-cells = <&fg_init>, <&fg_soc>;*/
+				nvmem-cells = <&fg_init>, <&fg_soc>;
 				nvmem-cell-names = "initialization", "state-of-charge";
 
 			};
@@ -2489,10 +2489,6 @@ cma=64M transparent_hugepage=never";
 		min-limit = <15>;
 		max-limit = <15000>;
 		vib-supply = <&mt_pmic_vibr_ldo_reg>;
-	};
-
-	gauge_timer {
-		compatible = "mediatek,gauge_timer_service";
 	};
 
 	md_ccif3@1023f000 {
