[ALPS07329894] arm64: dts: mt6765: DTS for PMU
arm64: dts: DTS for PMU driver

MTK-Commit-Id: 6e9cf277804917d27a69ff845214b39e06166c9b

Change-Id: I7de04cb98a5c7dfc18ffeabec75c7fe606616d34
Signed-off-by: kamal.sharma <kamal.sharma@mediatek.com>
CR-Id: ALPS07329894
Feature: FPSGO

--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -894,7 +894,7 @@ initcall_debug=1 pelt=8";
 	pmu {
 		compatible = "arm,armv8-pmuv3";
 		interrupt-parent = <&gic>;
-		interrupts = <GIC_PPI 7 IRQ_TYPE_LEVEL_LOW &ppi_cluster0>;
+		interrupts = <GIC_PPI 7 IRQ_TYPE_LEVEL_LOW 0>;
 	};
 
 	l2c_parity {
