[ALPS07673507] rgb: add mt6370 rgb driver
1. add rgb driver

MTK-Commit-Id: c434e137e8ff515ffad7983cbad74c2a9536ce0a

Signed-off-by: Jeff Chang <v_JeffCh@mediatek.com>
CR-Id: ALPS07673507
Feature: rtk_driver
Change-Id: I25dcd139d37d6c6e98515af710e9f01edfa778f1

--- a/drivers/leds/Kconfig
+++ b/drivers/leds/Kconfig
@@ -966,6 +966,9 @@ config LEDS_ACER_A500
 comment "Flash and Torch LED drivers"
 source "drivers/leds/flash/Kconfig"
 
+comment "RGB LED drivers"
+source "drivers/leds/rgb/Kconfig"
+
 config LEDS_MTK
 	tristate "Mediatek COMMON LED support"
 	depends on LEDS_CLASS
