--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -1963,15 +1963,15 @@ initcall_debug=1 pelt=8";
 		clocks = <&infracfg_ao CLK_IFR_CCIF_AP>,
 			<&infracfg_ao CLK_IFR_CCIF_MD>,
 			<&infracfg_ao CLK_IFR_CCIF1_AP>,
-			<&infracfg_ao CLK_IFR_CCIF1_MD>,
-			<&infracfg_ao CLK_IFR_CCIF2_AP>,
-			<&infracfg_ao CLK_IFR_CCIF2_MD>;
+			<&infracfg_ao CLK_IFR_CCIF1_MD>;
+			//<&infracfg_ao CLK_IFR_CCIF4_MD>,
+			//<&infracfg_ao CLK_IFR_CCIF5_MD>;
 		clock-names = "infra-ccif-ap",
 			"infra-ccif-md",
 			"infra-ccif1-ap",
-			"infra-ccif1-md",
-			"infra-ccif2-ap",
-			"infra-ccif2-md";
+			"infra-ccif1-md";
+			//"infra-ccif4-md",
+			//"infra-ccif5-md";
 	};
 
 	cldmadriver:cldmadriver@10014000 {
@@ -1988,55 +1988,40 @@ initcall_debug=1 pelt=8";
 		cldma-infracfg = <&infracfg_ao>;
 	};
 
-	mddriver:mddriver@10014000 {
-		compatible = "mediatek,mddriver", "mediatek,mddriver-mt6765";
-		/*
-		 * AP_CLDMA_AO "mediatek,apcldmain_ao"
-		 * AP_CLDMA_PDN "mediatek,apcldmain"
-		 * AP_CCIF_BASE "mediatek,ap_ccif0"
-		 * MD_CCIF_BASE "mediatek,md_ccif0"
-		 */
-		reg =	<0 0x10014000 0 0x1000>,
-			<0 0x1021b000 0 0x1000>,
-			<0 0x10209000 0 0x1000>,
-			<0 0x1020a000 0 0x1000>;
-		/*
-		 * IRQ_CLDMA "mediatek,apcldmamisc"
-		 * IRQ_CCIF0 "mediatek,ap_ccif0"
-		 * IRQ_CCIF1
-		 * IRQ_MDWDT "mediatek,md_rgu"
-		 */
-		interrupts = <GIC_SPI 165 IRQ_TYPE_LEVEL_HIGH 0>,
-			     <GIC_SPI 148 IRQ_TYPE_LEVEL_HIGH 0>,
-			     <GIC_SPI 149 IRQ_TYPE_LEVEL_HIGH 0>,
-			     <GIC_SPI 261 IRQ_TYPE_EDGE_RISING 0>;
-		mediatek,mdhif_type = <3>; /* bit0~3: CLDMA|CCIF|DPMAIF */
-		mediatek,md_id = <0>;
-		mediatek,ap_plat_info = <6765>;
-		mediatek,md_generation = <6293>;
-		mediatek,offset_apon_md1 = <0x1C24>;
-		mediatek,cldma_capability = <6>;
-		clocks =
-			<&scpsys_clk SCP_SYS_MD1>,
-			<&infracfg_ao CLK_IFR_CLDMA_BCLK>,
-			<&infracfg_ao CLK_IFR_CCIF_AP>,
-			<&infracfg_ao CLK_IFR_CCIF_MD>,
-			<&infracfg_ao CLK_IFR_CCIF1_AP>,
-			<&infracfg_ao CLK_IFR_CCIF1_MD>,
-			<&infracfg_ao CLK_IFR_CCIF2_AP>,
-			<&infracfg_ao CLK_IFR_CCIF2_MD>;
-		clock-names =
-			"scp-sys-md1-main",
-			"infra-cldma-bclk",
-			"infra-ccif-ap",
-			"infra-ccif-md",
-			"infra-ccif1-ap",
-			"infra-ccif1-md",
-			"infra-ccif2-ap",
-			"infra-ccif2-md";
-		_vmodem-supply = <&mt_pmic_vmodem_buck_reg>;
-		_vcore-supply = <&mt_pmic_vcore_buck_reg>;
-		ccci-infracfg = <&infracfg_ao>;
+	mddriver:mddriver {
+			compatible = "mediatek,mddriver";
+			/* bit0~3: CLDMA|CCIF|DPMAIF */
+			mediatek,mdhif_type = <6>;
+			mediatek,md_id = <0>;
+			mediatek,ap_plat_info = <6765>;
+			mediatek,md_generation = <6293>;
+			mediatek,offset_epon_md1 = <0x1c24>;
+			mediatek,cldma_capability = <6>;
+			/* bit0:srcclkena|1:srclken_o1_on|2:revert_sequencer */
+			/* 3:md_pll_setting|4:skip_topclk */
+			mediatek,power_flow_config = <0x1>; //bit0~4:01000
+			/* srclken_o1 set value |= 1<<21 */
+			mediatek,srclken_o1 = <0>;
+			reg = <0 0x0d0cf000 0 0x1000>; /* l2sram base address */
+			 /*MDWDT: 261 \ CCIF0: 148 \ CCIF0: 149*/
+			interrupts = <GIC_SPI 261 IRQ_TYPE_EDGE_RISING 0>,
+				     <GIC_SPI 148 IRQ_TYPE_LEVEL_HIGH 0>,
+				     <GIC_SPI 149 IRQ_TYPE_LEVEL_HIGH 0>;
+			clocks = <&scpsys_clk SCP_SYS_MD1>;
+			clock-names = "scp-sys-md1-main";
+			ccci-infracfg = <&infracfg_ao>;
+			ccci-topckgen = <&topckgen>;
+			dvfsrc-vcore-supply = <&dvfsrc_vcore>;
+		};
+
+	ccci_scp:ccci_scp {
+			compatible = "mediatek,ccci_md_scp";
+			reg = <0 0x1023c000 0 0x1000>, /*AP_CCIF2_BASE*/
+			      <0 0x1023d000 0 0x1000>; /*MD_CCIF2_BASE*/
+			clocks = <&infracfg_ao CLK_IFR_CCIF2_AP>,
+					 <&infracfg_ao CLK_IFR_CCIF2_MD>;
+			clock-names = "infra-ccif2-ap",
+						  "infra-ccif2-md";
 	};
 
 	md_auxadc:md_auxadc {
@@ -4428,8 +4413,10 @@ initcall_debug=1 pelt=8";
 	i2c8:i2c8{};
 	i2c9:i2c9{};
 	smart_pa: smart_pa{};
-	md1_sim1_hot_plug_eint:md1_sim1_hot_plug_eint{};
-	md1_sim2_hot_plug_eint:md1_sim2_hot_plug_eint{};
+	md1_sim1_hot_plug_eint:MD1_SIM1_HOT_PLUG_EINT {
+	};
+	md1_sim2_hot_plug_eint:MD1_SIM2_HOT_PLUG_EINT {
+	};
 
 	cm_mgr: cm_mgr@10200000 {
 		compatible = "mediatek,mt6765-cm_mgr";
@@ -4488,5 +4475,11 @@ initcall_debug=1 pelt=8";
 /* regulator always on for GKI test */
 &mt_pmic_vaud28_ldo_reg {
 	regulator-always-on;
+};
+
+&mddriver {
+/* for md pmic voltage setting*/
+	md_vmodem-supply = <&mt_pmic_vmodem_buck_reg>;
+	md_vmodem = <800000 800000>;
 };
 
