--- a/arch/arm64/boot/dts/mediatek/mt6366.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6366.dtsi
@@ -303,6 +303,7 @@
 				regulator-min-microvolt = <2800000>;
 				regulator-max-microvolt = <2800000>;
 				regulator-enable-ramp-delay = <270>;
+				regulator-always-on;
 			};
 
 			mt6358_vsram_others_reg: ldo_vsram_others {
