[ALPS07816978] arm64: dts: mt6768: eMMC: add gpio pull up
add mmc gpio pull up for uhs mode

MTK-Commit-Id: b52367096823f66a0ad077abe497286e38c58668

CR-Id: ALPS07816978
Feature: eMMC
Signed-off-by: lin.gui <lin.gui@mediatek.com>
Change-Id: Iff8c4ae589756a867b01ce85814b62c1f8dffb5a

--- a/arch/arm64/boot/dts/mediatek/cust_mt6768_msdc.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6768_msdc.dtsi
@@ -181,6 +181,7 @@
 				<PINMUX_GPIO170__FUNC_MSDC1_CMD>;
 			input-enable;
 			drive-strength = <3>;
+			bias-pull-up = <MTK_PUPD_SET_R1R0_01>;
 		};
 
 		pins_clk {
