--- a/arch/arm/boot/dts/mt6765.dts
+++ b/arch/arm/boot/dts/mt6765.dts
@@ -1409,6 +1409,7 @@ initcall_debug=1 pelt=8 clk_ignore_unused=1";
 
 			mtk_gauge: mtk_gauge {
 				compatible = "mediatek,mt6357-gauge";
+				charger = <&mt6370_chg>;
 				bootmode = <&chosen>;
 				io-channels = <&pmic_auxadc AUXADC_BAT_TEMP>,
 						<&pmic_auxadc AUXADC_BATADC>,
