[ALPS07805805] camera isp: update camera isp
[Detail]

add camera isp for mt6765

MTK-Commit-Id: 077ca10d34458c935458e01e18edc08edbf81927

Signed-off-by: Bryan-CC Huang <Bryan-CC.Huang@mediatek.com>
CR-Id: ALPS07805805
Feature: Camera Device
Change-Id: Iabde37eaceb7ec0e55424a689f8f99a26a799ff3

--- a/drivers/misc/mediatek/cameraisp/src/isp_4/Kconfig
+++ b/drivers/misc/mediatek/cameraisp/src/isp_4/Kconfig
@@ -5,3 +5,11 @@ config MTK_CAMERA_ISP_RAW_SUPPORT_ISP4_T
 	  processes and enhances the image raw data
 	  from the imgsensor.
 	  Disable if it is not supported or not wanted.
+
+config MTK_CAMERA_ISP_RAW_SUPPORT_ISP4_C
+	tristate "[ISP] Image Signal Processor - mt6765"
+	help
+	  Enable to build mt6765 camera isp driver which
+	  processes and enhances the image raw data
+	  from the imgsensor.
+	  Disable if it is not supported or not wanted.
