--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -449,6 +449,7 @@ initcall_debug=1 pelt=8";
 
 	regulator_vibrator: regulator_vibrator {
 		compatible = "regulator-vibrator";
+		label = "vibrator";
 		min-volt = <2300000>;
 		max-volt = <3200000>;
 		min-limit = <15>;
