[ALPS07827439] spm : make changes
remove weak references
removed commented code

MTK-Commit-Id: 40eaeea957004d091b74afb53a24b45522a55875

Signed-off-by: Devashish Patwal <devashish.patwal@mediatek.com>
CR-Id: ALPS07827439
Feature: lpm
Change-Id: Ia6f517eead7149b462589a8d6220a9e35f7dd226

--- a/drivers/misc/mediatek/spm/common_v0/Makefile
+++ b/drivers/misc/mediatek/spm/common_v0/Makefile
@@ -32,23 +32,8 @@ ifeq ($(CONFIG_MTK_TINYSYS_SSPM_V0), y)
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/sspm/v0/
 endif
 ccflags-y += -I$(srctree)/include/linux/soc
-
-#obj-y += mtk_spm.o
-#obj-y += mtk_spm_twam.o
-#obj-y += mtk_spm_irq.o
-#obj-y += mtk_spm_dram.o
-#obj-y += mtk_spm_internal.o
-#obj-y += mtk_spm_suspend.o
-#obj-y += mtk_spm_suspend_process.o
-#obj-y += mtk_sspm.o
-#obj-y += mtk_spm_power.o
-#obj-y += mtk_spm_fs.o
-#obj-y += mtk_spm_utils.o
-#obj-y += mtk_idle_cond_check.o
-#obj-y += mtk_spm_idle.o
-#obj-y += mtk_spm_vcore_dvfs.o
-#obj-y += mtk_spm_resource_req_console.o
-
+# Include mcdi header mtk_mcdi_api.h
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/mcdi/include/
 
 obj-$(CONFIG_MTK_SPM_V0) += MTK_INTERNAL_SPM.o
 MTK_INTERNAL_SPM-y += mtk_spm.o
@@ -69,11 +54,7 @@ MTK_INTERNAL_SPM-y += mtk_spm_utils.o
 MTK_INTERNAL_SPM-y += mtk_idle_cond_check.o
 MTK_INTERNAL_SPM-y += mtk_spm_idle.o
 MTK_INTERNAL_SPM-y += mtk_spm_vcore_dvfs.o
-#MTK_INTERNAL_SPM-y += mtk_idle_module_plat.o
 MTK_INTERNAL_SPM-y += mtk_spm_resource_req_console.o
-#MTK_INTERNAL_SPM-y += models/mtk_idle_dram.o
-#MTK_INTERNAL_SPM-y += models/mtk_idle_syspll.o
-#MTK_INTERNAL_SPM-y += models/mtk_idle_bus26m.o
 
 MTK_INTERNAL_SPM-y += ../common/mtk_idle.o
 MTK_INTERNAL_SPM-y += ../common/mtk_idle_select.o
@@ -85,12 +66,8 @@ MTK_INTERNAL_SPM-y += ../common/mtk_sleep.o
 MTK_INTERNAL_SPM-y += ../common/mtk_sleep_init.o
 MTK_INTERNAL_SPM-y += ../common/mtk_vcore_dvfs.o
 MTK_INTERNAL_SPM-y += ../common/mtk_sodi.o
-#MTK_INTERNAL_SPM-y += ../common/mtk_idle_sysfs_debugfs.o
 MTK_INTERNAL_SPM-y += ../common/mtk_dpidle.o
-
+MTK_INTERNAL_SPM-y += ../common/mtk_idle_fs/mtk_lp_sysfs_procfs.o
 MTK_INTERNAL_SPM-y += ../common/mtk_idle_fs/mtk_idle_sysfs.o
 MTK_INTERNAL_SPM-y += ../common/mtk_idle_fs/mtk_lp_kernfs.o
 MTK_INTERNAL_SPM-y += ../common/mtk_idle_fs/mtk_lp_sysfs.o
-MTK_INTERNAL_SPM-y += ../common/mtk_idle_fs/mtk_lp_sysfs_debugfs.o
-MTK_INTERNAL_SPM-y += ../common/mtk_idle_fs/mtk_lp_sysfs_kernfs.o
-MTK_INTERNAL_SPM-y += ../common/mtk_idle_fs/mtk_lp_sysfs_procfs.o
