[ALPS07827439] power_gs : porting
Port golden setting for 6765

MTK-Commit-Id: 1de4a218568bb334d03e6be948736bb54053d45d

Signed-off-by: Devashish Patwal <devashish.patwal@mediatek.com>
CR-Id: ALPS07827439
Feature: lpm
Change-Id: I2bfff019edfdcb2726176fd6a2f0126436b227c2

--- a/drivers/misc/mediatek/Makefile
+++ b/drivers/misc/mediatek/Makefile
@@ -121,6 +121,7 @@ obj-$(CONFIG_MTK_PPM_V3) += ppm_v3/
 obj-$(CONFIG_MTK_SPM) += spm/
 obj-$(CONFIG_MTK_SPM_V0) += spm/
 obj-$(CONFIG_MTK_POWER_GS_LEGACY) += power_gs_v1/
+obj-$(CONFIG_MTK_POWER_GS_LEGACY_V2) += power_gs_v1/
 obj-$(CONFIG_MTK_VIDEOCODEC_DRIVER) += videocodec/
 obj-$(CONFIG_MTK_LEGACY_THERMAL) += thermal/
 obj-$(CONFIG_MTK_MT6382_BDG) += spi_slave_drv/
