--- a/drivers/misc/mediatek/power_gs_v1/Kconfig
+++ b/drivers/misc/mediatek/power_gs_v1/Kconfig
@@ -5,3 +5,11 @@ config MTK_POWER_GS_LEGACY
 	  When enable this option, spm will dump pmic golden setting
 	  for low power tuning.
 	  If unsure, say N.
+
+config MTK_POWER_GS_LEGACY_V2
+	tristate "MTK power golden setting legacy"
+	help
+	  This kernel config can be used to enable power golden setting.
+	  When enable this option, spm will dump pmic golden setting
+	  for low power tuning.
+	  If unsure, say N.
