--- a/arch/arm/boot/dts/cust_mt6765_msdc.dtsi
+++ b/arch/arm/boot/dts/cust_mt6765_msdc.dtsi
@@ -129,18 +129,20 @@
 &mmc1 {
 	host-index = <1>;
 	status = "okay";
-	pinctrl-names = "default", "state_uhs";
+	pinctrl-names = "default", "state_uhs", "pull_down";
 	pinctrl-0 = <&mmc1_pins_default>;
 	pinctrl-1 = <&mmc1_pins_uhs>;
+	pinctrl-2 = <&mmc1_pins_pull_down>;
 	bus-width = <4>;
 	max-frequency = <200000000>;
+	ocr-voltage = <0x00030000>;
 	cap-sd-highspeed;
 	sd-uhs-sdr12;
 	sd-uhs-sdr25;
 	sd-uhs-sdr50;
 	sd-uhs-sdr104;
 	sd-uhs-ddr50;
-	cd-gpios = <&pio 18 GPIO_ACTIVE_LOW>;
+	cd-gpios = <&pio 1 GPIO_ACTIVE_LOW>;
 	vmmc-supply = <&mt_pmic_vmch_ldo_reg>;
 	vqmmc-supply = <&mt_pmic_vmc_ldo_reg>;
 	no-mmc;
@@ -157,11 +159,13 @@
 				<PINMUX_GPIO30__FUNC_MSDC1_CMD>;
 			input-enable;
 			drive-strength = <3>;
+			bias-pull-up = <MTK_PUPD_SET_R1R0_01>;
 		};
 
 		pins_clk {
 			pinmux = <PINMUX_GPIO29__FUNC_MSDC1_CLK>;
 			drive-strength = <3>;
+			bias-pull-down = <MTK_PUPD_SET_R1R0_10>;
 		};
 
 		pins_insert {
@@ -184,6 +188,25 @@
 		pins_clk {
 			pinmux = <PINMUX_GPIO29__FUNC_MSDC1_CLK>;
 			drive-strength = <3>;
+		};
+	};
+
+	mmc1_pins_pull_down: mmc1@1 {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO32__FUNC_MSDC1_DAT0>,
+				<PINMUX_GPIO34__FUNC_MSDC1_DAT1>,
+				<PINMUX_GPIO33__FUNC_MSDC1_DAT2>,
+				<PINMUX_GPIO31__FUNC_MSDC1_DAT3>,
+				<PINMUX_GPIO30__FUNC_MSDC1_CMD>;
+			input-enable;
+			drive-strength = <3>;
+			bias-pull-down = <MTK_PUPD_SET_R1R0_10>;
+		};
+
+		pins_clk {
+			pinmux = <PINMUX_GPIO29__FUNC_MSDC1_CLK>;
+			drive-strength = <3>;
+			bias-pull-down = <MTK_PUPD_SET_R1R0_10>;
 		};
 	};
 };
