[ALPS07831225] power_gs : fix makefile
This fixes unidentified symbols error in 32bit projects

MTK-Commit-Id: 9518131eea342458b30cef5dfb1cd3952cb036b4

Change-Id: I0cd5e84bc617f3541b699a1232dcb54d717d2b76
Signed-off-by: devashish.patwal <devashish.patwal@mediatek.com>
CR-Id: ALPS07831225
Feature: lpm

--- a/drivers/misc/mediatek/power_gs_v1/Makefile
+++ b/drivers/misc/mediatek/power_gs_v1/Makefile
@@ -29,7 +29,7 @@ endif
 
 ifneq ($(strip $(CONFIG_MTK_POWER_GS_LEGACY_V2)),)
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/include/power_gs_v1/common_v2/
-obj-m += mtk_power_gs_v2.o
+obj-$(CONFIG_MTK_POWER_GS_LEGACY_V2) += mtk_power_gs_v2.o
 mtk_power_gs_v2-y += mtk_power_gs.o
 mtk_power_gs_v2-y += mtk_power_gs_api.o
 mtk_power_gs_v2-y += common_v2/mtk_power_gs_6355_array.o
